<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:background="@color/BeigeCoffee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivImgProducto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="5dp"
            android:src="@mipmap/logo_coffee_round"/>

        <EditText
            android:id="@+id/etCliente"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_margin="5dp"
            android:hint="@string/Cliente"
            android:textAlignment="center"
            android:textColorHint="@color/GrisRelleno"
            android:textColor="@color/Negro"
            android:background="@color/Blanco"
            android:textSize="30dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/CaféRelleno">

        <ImageButton
            android:id="@+id/ibIzquierda"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1.5"
            android:src="@android:drawable/ic_media_previous" />

        <TextView
            android:id="@+id/tvProducto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_margin="5dp"
            android:textSize="24dp"
            android:textAlignment="center"
            android:text="@string/NombreDeProducto"
            android:textColor="@color/RojoCoffee"/>

        <ImageButton
            android:id="@+id/ibDerecha"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1.5"
            android:src="@android:drawable/ic_media_next" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgPresentación"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/Negro"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbPresentación_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:textSize="16dp"
            android:buttonTint="@color/Negro"
            android:text="@string/Presentación_1"
            android:textColor="@color/Negro"/>
        <RadioButton
            android:id="@+id/rbPresentación_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:textSize="16dp"
            android:buttonTint="@color/Negro"
            android:text="@string/Presentación_2"
            android:textColor="@color/Negro"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Adicionales"
                android:textColor="@color/RojoCoffee"
                android:layout_margin="5dp"/>

            <CheckBox
                android:id="@+id/cbAdicional_1"
                style="@style/sty_CheckBox"
                android:buttonTint="@color/RojoCoffee"
                android:text="@string/Adicional_1" />

            <CheckBox
                android:id="@+id/cbAdicional_2"
                style="@style/sty_CheckBox"
                android:buttonTint="@color/RojoCoffee"
                android:text="@string/Adicional_2"/>
            <CheckBox
                android:id="@+id/cbAdicional_3"
                style="@style/sty_CheckBox"
                android:buttonTint="@color/RojoCoffee"
                android:text="@string/Adicional_3"/>
            <CheckBox
                android:id="@+id/cbAdicional_4"
                style="@style/sty_CheckBox"
                android:buttonTint="@color/RojoCoffee"
                android:text="@string/Adicional_4"/>
            <CheckBox
                android:id="@+id/cbAdicional_5"
                style="@style/sty_CheckBox"
                android:buttonTint="@color/RojoCoffee"
                android:text="@string/Adicional_5"/>
            <CheckBox
                android:id="@+id/cbAdicional_6"
                style="@style/sty_CheckBox"
                android:buttonTint="@color/RojoCoffee"
                android:text="@string/Adicional_6"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Opciones"
                android:textColor="@color/RojoCoffee"
                android:layout_margin="5dp"/>

            <RadioGroup
                android:id="@+id/rgOpciones"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9">
                <RadioButton
                    android:id="@+id/rbOpción_1"
                    style="@style/sty_RadioButton"
                    android:buttonTint="@color/RojoCoffee"
                    android:text="@string/Opción_1"/>

                <RadioButton
                    android:id="@+id/rbOpción_2"
                    style="@style/sty_RadioButton"
                    android:buttonTint="@color/RojoCoffee"
                    android:text="@string/Opción_2"/>

                <RadioButton
                    android:id="@+id/rbOpción_3"
                    style="@style/sty_RadioButton"
                    android:buttonTint="@color/RojoCoffee"
                    android:text="@string/Opción_3"/>

                <RadioButton
                    android:id="@+id/rbOpción_4"
                    style="@style/sty_RadioButton"
                    android:buttonTint="@color/RojoCoffee"
                    android:text="@string/Opción_4"/>

                <RadioButton
                    android:id="@+id/rbOpción_5"
                    style="@style/sty_RadioButton"
                    android:buttonTint="@color/RojoCoffee"
                    android:text="@string/Opción_5"/>

                <RadioButton
                    android:id="@+id/rbOpción_6"
                    style="@style/sty_RadioButton"
                    android:buttonTint="@color/RojoCoffee"
                    android:text="@string/Opción_6"/>


            </RadioGroup>




        </LinearLayout>



    </LinearLayout>
    <android.support.v4.widget.Space
        style="@style/sty_Space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ResumenOrden"
                android:textAlignment="center"
                android:textColor="@color/RojoCoffee"/>

            <ListView
                android:id="@+id/lvResumenOrden"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:layout_margin="5dp"
                android:background="@color/Gris">
            </ListView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_margin="5dp"
                android:hint="@string/Requerimientos"
                android:textColorHint="@color/GrisRelleno"
                android:textColor="@color/Negro"
                android:background="@color/Blanco"
                android:textSize="14dp"/>
            <Button
                android:id="@+id/bAgregar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:text="@string/bAgregar"
                style="@style/sty_BotonAmarillo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:text="@string/Hora"
                android:textColor="@color/RojoCoffee"
                android:textAlignment="center"/>
            <Spinner
                android:id="@+id/sHora"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_margin="4dp"
                android:background="@color/Gris">

            </Spinner>


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bEnviar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            style="@style/sty_BotonVerde"
            android:text="@string/bEnviar"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvPrecioFinal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/PrecioFinal"
            android:textColor="@color/RojoCoffee"
            android:textSize="40dp"
            android:textAlignment="textEnd"
            android:layout_margin="5dp"/>

    </LinearLayout>





</LinearLayout>